<resources>
    <string name="project_name">キッズビジネスタウンいちかわ</string>
    <string name="icon_launcher_description">アプリのアイコン</string>

    <string name="drawer_setting">設定</string>

    <string name="delete">けす</string>
    <string name="account">かいけい</string>
    <string name="add_item">商品追加</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="DrawerTitleSettings">設定</string>
    <string name="DrawerTitleChangeStore">おみせの切り替え</string>
    <string name="DrawerTitleManualItemSelection">手動で商品を選ぶ</string>
    <string name="BetaDrawerTitleInputDummyItem">ダミー商品読み込み</string>
    <string name="BetaDrawerTitleInputDummyStaff">ダミースタッフ読み込み</string>

    <string name="request_item_failed">商品の読み取りに失敗しました。連続で発生する場合、担当にお知らせください</string>
    <string name="read_receipt_failed">レシートの読み取りはできません。</string>
    <string name="api_version_mismatch">サーバーとアプリのAPIバージョンが一致しません。\nアプリを更新してください</string>

    <!-- Settings -->
    <string name="back">もどる</string>
    <string name="back_to_main">メイン画面に戻る</string>
    <string name="change">おつり</string>
    <string name="shortage">たりない</string>
    <string name="deposit">おあずかり</string>
    <string name="total">ごうけい</string>
    <string name="close">閉じる</string>
    <string name="reload">再読み込み</string>
    <string name="go_back">もどる</string>
    <string name="clear_one_num">↪️</string>
    <string name="error">エラー</string>
    <string name="current_connetion_target">現在の接続先</string>
    <string name="load_setting">設定を読み込む</string>
    <string name="open_in_browser">ブラウザで開く</string>
    <string name="change_mode">練習モードに切り替える</string>
    <string name="current_mode">現在のモード</string>
    <string name="store_fetch_failed">サーバーとの通信に失敗しました。\n接続を確認してください。</string>
    <string name="item_fetch_failed">商品一覧を取得できませんでした。\n接続を確認してください。</string>
    <string name="item_selection_empty">商品がありません</string>

    <string name="river_format">%d リバー</string>
    <string name="staff_name_format">たんとう: %s</string>
    <string name="title_mode_format">[%sモード]</string>
    <string name="title_test_mode">[テストモード]</string>
    <string name="practice_mode_no_receipt">練習モードのためレシートは出ません</string>
    <string name="network_error">通信エラーが発生しました。</string>

...
